<resources>
    <string name="app_name">Dynasty Drinks</string>
    <string name="official_n_stores">Official<br />Stores</string>
    <string name="free_br_delivery">Free <br /> Delivery</string>
    <string name="credo_cashbacks">Credo <br /> Cashbacks</string>
    <string name="top_deals">Top Deals</string>
    <string name="call_to_order">Call To Order</string>
    <string name="flash_sale">FLASH SALE</string>
    <string name="limited_time_offers">Limited Time Offers</string>
    <string name="see_all">SEE ALL</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="feed">Feed</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="item_title">Item Title</string>
    <string name="ksh_29_000">Ksh.29,000</string>
    <string name="_60">-60%</string>
    <string name="cart">Cart</string>
    <string name="_03">03</string>
    <string name="filter">Filter</string>
    <string name="x3">x3</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="edit">Edit</string>
    <string name="james">James Ndungu</string>
    <string name="_254748267133">+254748267133</string>
    <string name="location_alt">Nakuru Mercy Branch Kilishop,Nakuru Town Center Prime Plaza 22 floor RM304, etc etc</string>
    <string name="account_balance_0">Account Balance(0)</string>
    <string name="mpesa">Mpesa</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="m_1">Confirm phone number , then click <b>Proceed</b> to generate payment Request to your phone</string>
    <string name="m_2">Enter Your MPESA PIN on prompt pop up on your phone to complete payment</string>
    <string name="_0748267133">0748267133</string>
    <string name="m_pesa_account">M-PESA Account</string>
    <string name="food_fest">Food Fest</string>
    <string name="no_data">No Offers available at this time. Check again later</string>
    <string name="no_drinks_found">No Drinks Found</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="cancel">Cancel</string>
    <string name="most_popular">Most Popular</string>
    <string name="title_activity_main_admin">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dynasty_co_ke">dynasty.co.ke</string>
    <string name="add_offer">Add Offer</string>
    <string name="remove_offer">Remove Offer</string>
    <string name="add_drinks">Add Drinks</string>
    <string name="remove_drinks">Remove Drinks</string>
    <string name="select">Select</string>
    <string name="drink_title">Drink Title</string>
    <string name="current_price">Current Price</string>
    <string name="previous_price">Previous Price</string>
    <string name="click_to_select_category">Click to Select Category</string>
    <string name="post">Post</string>
    <string name="working_on_it">Working On It</string>
    <string name="_1_selected">1 Selected</string>
    <string name="select_all">Select All</string>
    <string name="view_and_send_a_message">Messaging</string>
    <string name="new_mess">New</string>
    <string name="_12_03_2020_12_30">12/03/2020 @ 12:30</string>
    <string name="type_your_message_all_users_with_the_client_app_will_receive_this_message">Type your message. All Users with the client app will receive this message</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="send">Send</string>
    <string name="users_in_the_last_5_days">Users In The Last 5 days</string>
    <string name="orders_in_the_last_5_days">Orders In The Last 5 Days</string>
    <string name="most_ordered_categories">Most Ordered Categories</string>
    <string name="most_ordered_drinks">Most Ordered Drinks</string>
    <string name="brian_omondi">Brian Omondi</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="input_phone_number">input phone number</string>
    <string name="get_login_code">Get Login Code</string>
    <string name="input_verification_code">Input Verification Code</string>
    <string name="input_your_name">Input Your Name</string>
    <string name="input_your_phone_number">Input Your Phone Number</string>
    <string name="consent">I Agree to Dynasty\'s Terms and Conditions and to Provide my Location data for delivery Purposes only</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="account_balance">Account Balance</string>
    <string name="ksh_0">Ksh.0</string>
    <string name="add_funds">Add Funds</string>
    <string name="_8379">8379</string>
    <string name="total_cost">Total Cost</string>
    <string name="date_ordered">Date Ordered</string>
    <string name="order_status">Order Status</string>
    <string name="pending">Pending</string>
    <string name="mark_as_received">Mark as Received</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_icon">Edit icon</string>
    <string name="save">Save</string>
    <string name="change_delivery_location">Change Delivery Location</string>
    <string name="delivery_location">Delivery Location:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_maps">Map</string>
    <string name="done">Done</string>
    <string name="input_amount">Input Amount</string>
    <string name="continue_on">Continue</string>
    <string name="redeem">Redeem</string>
    <string name="cashbacks">CashBacks</string>
    <string name="delete">Delete</string>
    <string name="admin">Admin</string>
    <string name="manage_users">Manage Users</string>
    <string name="give_credo_cashback">Give Credo CashBack</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="mark_as_sent">Mark As Sent</string>
    <string name="view_details">View Details</string>
    <string name="manage_orders">Manage Orders</string>
</resources>