<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@android:color/transparent"
    android:layout_margin="5dp"
   >
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_baseline_close_24"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        android:id="@+id/closeDialog"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_white_round_corner">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_cost"
        android:layout_margin="10dp"
        android:id="@+id/orderValueView"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksh_29_000"
        android:layout_margin="10dp"
        android:id="@+id/orderValue"
        android:textColor="@color/orange"
        android:layout_toEndOf="@id/orderValueView"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_ordered"
        android:layout_below="@id/orderValueView"
        android:layout_margin="10dp"
        android:id="@+id/orderDateView"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_03_2020_12_30"
        android:layout_below="@id/orderValue"
        android:layout_margin="10dp"
        android:id="@+id/orderDateValue"
        android:textColor="@color/orange"
        android:layout_toEndOf="@id/orderDateView"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status"
        android:layout_below="@id/orderDateView"
        android:layout_margin="10dp"
        android:id="@+id/receiveStatus"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:layout_below="@id/orderDateView"
        android:layout_margin="10dp"
        android:id="@+id/orderStatus"
        android:layout_toEndOf="@+id/receiveStatus"
        android:textColor="@color/grey"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>


    <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="10dp"
       android:layout_marginStart="10dp"
       android:layout_marginBottom="60dp"
        android:layout_below="@+id/orderStatus">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/orderItems"
           android:padding="7dp"
           android:layout_margin="10dp"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
           android:textColor="@color/grey"
           android:text="@string/hide_bottom_view_on_scroll_behavior"/>
   </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMarkDelivered"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/grey"
            app:cornerRadius="20dp"
            android:text="@string/mark_as_received"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
           />
    </RelativeLayout>

</RelativeLayout>