<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="7dp"
    app:contentPadding="5dp"
    app:cardCornerRadius="10dp"

   >
<com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_8379"
    android:id="@+id/cashBackIdView"
    android:textColor="@color/orange"
    android:padding="10dp"
    android:layout_gravity="start"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
    />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksh_29_000"
        android:id="@+id/cashAmountView"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_gravity="center|center_horizontal"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />
   <com.google.android.material.button.MaterialButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="end"
       android:textColor="@color/white"
       android:text="@string/redeem"
       android:id="@+id/redeem"
       app:cornerRadius="20dp"/>
</com.google.android.material.card.MaterialCardView>