<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:id="@+id/layout"
     android:background="@drawable/bg_top_rounded">
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/flash_sale"
         android:textColor="@color/white"
         android:layout_margin="10dp"
         android:layout_alignParentStart="true"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         android:id="@+id/flashSale"/>
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_margin="10dp"
         android:text="@string/limited_time_offers"
         android:textColor="@color/white"
         android:layout_below="@+id/flashSale"
         app:drawableEndCompat="@drawable/ic_baseline_local_offer_orange"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/see_all"
         android:id="@+id/allOffers"
         android:layout_alignParentEnd="true"
         android:textColor="@color/white"
         android:layout_below="@+id/flashSale"
         android:layout_alignParentTop="true"
         android:layout_margin="10dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

 </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:id="@+id/noData"
        android:layout_below="@+id/layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler"
        android:layout_below="@+id/layout"
        android:layout_margin="5dp"/>

</RelativeLayout>