<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.LiquorStore"
    tools:context=".activities.CartActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/appBar">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:id="@+id/toolbar"
            app:title="Place Order"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_information"
            android:textColor="@color/black"
            android:id="@+id/shippingInfo"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="7dp"
            android:padding="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/orange"
            android:layout_alignParentEnd="true"
            android:id="@+id/edit"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="@color/orange"
            android:layout_margin="7dp"
            android:padding="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/james"
            android:id="@+id/userName"
            android:layout_below="@+id/shippingInfo"
            android:textColor="@color/black"
             android:layout_margin="7dp"
            android:padding="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_254748267133"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edit"
            android:layout_margin="7dp"
            android:id="@+id/user_phone"
            android:padding="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_alt"
            android:textColor="@color/black"
            android:id="@+id/location"
            android:layout_below="@+id/userName"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:layout_margin="7dp"
            android:padding="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/stripes"
            android:layout_below="@+id/location"
            android:layout_margin="5dp"
            android:id="@+id/dashes"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Payment Method"
            android:textColor="@color/black"
            android:layout_below="@+id/dashes"
            android:id="@+id/payment"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="7dp"
            android:padding="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance_0"
            android:layout_below="@+id/payment"
            android:textColor="@color/black"
            android:id="@+id/account"
            app:drawableStartCompat="@drawable/ic_baseline_account_balance_wallet_24"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="7dp"
            android:padding="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/orange"
            android:layout_below="@+id/payment"
            android:layout_alignBottom="@+id/account"
            android:layout_margin="10dp"
            android:id="@+id/chooseAccount"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpesa"
            android:layout_below="@+id/account"
            android:textColor="@color/black"
            android:id="@+id/mpesa"
            app:drawableStartCompat="@drawable/ic_baseline_mobile_screen_share_24"
            app:drawableTint="@color/green"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="7dp"
            android:padding="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/orange"
            android:id="@+id/chooseMpesa"
            android:layout_alignBottom="@+id/mpesa"
            android:layout_below="@+id/chooseAccount"
            android:layout_margin="10dp" />
    </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar"
            android:id="@+id/recycler"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="100dp"/>
    </RelativeLayout>
    </ScrollView>
<include
    layout="@layout/total_area"
    android:layout_alignParentBottom="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        app:cornerRadius="1dp"
        android:id="@+id/checkout"/>

</RelativeLayout>